# yukari

./: Cargo.toml  pgo.sh
.cargo/: config.toml
revad/src/: chain.rs  tape.rs
yukari/: Cargo.toml
yukari-book/: 01-01-board-rep.md
yukari-movegen/: Cargo.toml
yukari-movegen/benches/: makemove.rs
yukari-movegen/examples/: perft.rs
yukari-movegen/src/: chessmove.rs  colour.rs  lib.rs  piece.rs  square.rs
yukari-movegen/src/board/: bitlist.rs  data.rs  index.rs  mod.rs  piecelist.rs  piecemask.rs
yukari/benches/: search.rs
yukari/examples/: bench.rs  search.rs  tt-perft.rs  tune.rs
yukari/src/: eval.rs  lib.rs  main.rs  search.rs  tt.rs  tune.rs
yukari/src/engine/: mod.rs  tc.rs
yukari/src/proto/: comms.rs  mod.rs
