[package]
name = "yukari-movegen"
version = "0.1.0"
authors = ["Yukari Chess <yukarichess@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyvec = "1.5"
once_cell = "1.4"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.3", features = ["real_blackbox"]}
rayon = "1.5.1"

[[bench]]
name = "makemove"
harness = false
