[package]
name = "yukari"
version = "0.1.0"
authors = ["Yukari Chess <yukarichess@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yukari-movegen = { path = "../yukari-movegen" }
rand = "0.8"
tinyvec = "1.5"

[dev-dependencies]
criterion = { version = "0.3", features = ["real_blackbox"]}

[[bench]]
name = "search"
harness = false
